<resources>
    <string name="app_name">Macentli</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="tortillas">Tortillas 100% Organicas</string>
    <string name="compartir">Compartir</string>
    <string name="enviar">Enviar</string>
    <string name="comu">Comunicate</string>
    <string name="somos">Somos una compañía socialmente responsable que elabora tortillas con maíz criollo germinado de la región central de la república mexicana. Mediante un proceso de nixtamalización diseñado para conservar un alto contenido de fibra y un alto valor nutrimental logramos hacer una tortilla que además de ser saludable tiene un sabor superior a las demás.  Contribuimos para preservar el cultivo de maíces nativos y llevar hasta su mesa un producto de alta calidad.</string>
    <string name="pieza">Una pieza de 25g aporta:</string>

    <string name="grasasat">Grasa Saturada: 0 Kcal</string>
    <string name="grasaotra">Otras Grasas: 0 Kcal</string>
    <string name="azucar">Azucares: 0 Kcal</string>
    <string name="sodio">Sodio: 3 g</string>
    <string name="fibra">Fibra Dietetica: 3.5 g</string>
    <string name="energia">Energia: 42 Kcal</string>
    <string name="envase">Energia por envase: 504 Kcal</string>

    <string name="azul">Docenas azules</string>
    <string name="amarillo">Docenas amarillas</string>



    <string name="info">Informacion nutrimental</string>
    <string name="quien">¿Quiénes Somos?</string>
    <string name="medios">Medios</string>
    <string name="ubi">Ubicaciones</string>
    <string name="succ">Sucursales</string>
    <string name="order">Ordenar</string>






    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Direcciones">
        <item>Amalur Rio Mayo 1100 plaza El Campanario Tel (777) 322 9012</item>
        <item>Shaya Michan Av. Nueva Italia No. 607 Col. Sn Cristobal Tel. (777) 102 1121</item>
        <item>Farmacia Naturista Itzel Av. Vicente Guerrero No 100</item>
        <item>Fruteria Los Galo Av. Poder Legislativo</item>
        <item>Santa Marina Interior del Mercado de Lomas de Cortez</item>
        <item>Edén Interior Plaza Cuernavaca Local E7 Pasillo Arbolado Tel (777) 245 7016</item>
        <item>Gaia Av. Emiliano Zapata No. 921A Col. Bna Vista (junto a Farm de Similares) Tel (777) 311 2490</item>
        <item>Mercadito Organico Av. Santa María Col. Rancho Cortes</item>
        <item>Huerta de Lucia Calle Alarcón No. 249 Poblado de Ahuatepec.</item>

    </string-array>
</resources>
