<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/quien" />
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/medios" />
        <item
            android:id="@+id/nav_legal"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/ubi" />
        <item
            android:id="@+id/nav_succ"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/succ" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/cart"
            android:title="@string/order" />
    </group>

    <item android:title="@string/comu">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/compartir" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/enviar" />
        </menu>
    </item>

</menu>
